[project]
name = "outreddit"
version = "2.4"
description = ""
authors = ["Marcin Bachry <hegel666@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "requests",
  "slowapi",
  "uvicorn",
]

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
line_length = 120
profile = 'black'
